// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows to define a custom component 1`] = `
<DummyComponent
  getRef={[Function]}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <object
    aria-hidden={true}
    onLoad={[Function]}
    style={
      Object {
        "display": "block",
        "height": "100%",
        "left": 0,
        "overflow": "hidden",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": -1,
      }
    }
    tabIndex={-1}
    type="text/html"
  />
</DummyComponent>
`;

exports[`allows to define an \`onResize\` property 1`] = `
<ResizeAware
  component="div"
  onResize={[Function]}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <object
      aria-hidden={true}
      onLoad={[Function]}
      style={
        Object {
          "display": "block",
          "height": "100%",
          "left": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
      tabIndex={-1}
      type="text/html"
    />
  </div>
</ResizeAware>
`;

exports[`allows to define custom width and height names 1`] = `
<ResizeAware
  component="div"
  heightPropName="customHeight"
  style={
    Object {
      "position": "relative",
    }
  }
  widthPropName="customWidth"
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <object
      aria-hidden={true}
      onLoad={[Function]}
      style={
        Object {
          "display": "block",
          "height": "100%",
          "left": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
      tabIndex={-1}
      type="text/html"
    />
    <Test
      customHeight={10}
      customWidth={10}
    />
  </div>
</ResizeAware>
`;

exports[`allows to use a function as child 1`] = `
<ResizeAware
  component="div"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <object
      aria-hidden={true}
      onLoad={[Function]}
      style={
        Object {
          "display": "block",
          "height": "100%",
          "left": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
      tabIndex={-1}
      type="text/html"
    />
    <div
      height={10}
      width={10}
    />
  </div>
</ResizeAware>
`;

exports[`allows to use its child as target 1`] = `
<ResizeAware
  component="div"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <object
      aria-hidden={true}
      onLoad={[Function]}
      style={
        Object {
          "display": "block",
          "height": "100%",
          "left": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
      tabIndex={-1}
      type="text/html"
    />
    <DummyComponent>
      <div>
        x
      </div>
    </DummyComponent>
  </div>
</ResizeAware>
`;

exports[`allows to use itself between a component markup 1`] = `
<div>
  <ResizeAware
    component="div"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <object
        aria-hidden={true}
        onLoad={[Function]}
        style={
          Object {
            "display": "block",
            "height": "100%",
            "left": 0,
            "overflow": "hidden",
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
            "zIndex": -1,
          }
        }
        tabIndex={-1}
        type="text/html"
      />
      <div />
      <div />
    </div>
  </ResizeAware>
</div>
`;
